tests/reference/asr-index_non_integer_subarray1-33d2605.stderr
semantic error: Array start index must be of type integer
 --> tests/errors/index_non_integer_subarray1.f90:4:16
  |
4 |     print *, x(1.1:2)
  |                ^^^ 
